# ChangeLog for media-gfx/opendx
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/opendx/ChangeLog,v 1.12 2005/05/24 23:01:41 spyderous Exp $

  24 May 2005; Donnie Berkholz <spyderous@gentoo.org>;
  opendx-4.3.2-r1.ebuild:
  (#82672) Filter -finline-functions and -O3.

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> :
  Dependency update: dev-libs/szip -> sci-libs/szip.

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> :
  Dependency update: dev-libs/szip -> sci-libs/szip.

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> opendx-4.3.2-r1.ebuild:
  Dependency update: dev-libs/szip -> sci-libs/szip.

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> opendx-4.3.2.ebuild:
  Dependency update: dev-libs/szip -> sci-libs/szip.

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> opendx-4.3.2-r1.ebuild:
  Dependency update: dev-libs/hdf -> sci-libs/hdf.

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> opendx-4.3.2.ebuild:
  Dependency update: dev-libs/hdf -> sci-libs/hdf.

*opendx-4.3.2-r1 (24 May 2004)

  24 May 2004; Patrick Kursawe <phosphan@gentoo.org> opendx-4.3.2-r1.ebuild:
  Making szip dependency optional

  16 Mar 2004; Patrick Kursawe <phosphan@gentoo.org> opendx-4.3.2.ebuild:
  Fixing bug #44727 by adding szip as dependency.

  15 Mar 2004; David Holm <dholm@gentoo.org> opendx-4.3.2.ebuild:
  Added to ~ppc.

*opendx-4.3.2 (14 Mar 2004)

  14 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; metadata.xml,
  opendx-4.3.2.ebuild:
  Initial commit to close #22217. Ebuild by myself and Patrick Kursawe
  <phosphan@gentoo.org>.
